[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Exit_UI.gd" type="Script" id=1]

[node name="Exit_UI" type="PopupPanel"]
margin_left = -103.0
margin_top = -38.0
margin_right = 104.0
margin_bottom = 38.0
size_flags_horizontal = 4
size_flags_vertical = 4
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 203.0
margin_bottom = 96.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_right = 199.0
margin_bottom = 20.0
text = "Resume"

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 199.0
margin_bottom = 44.0
text = "Restart"

[node name="PlayerDie" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 199.0
margin_bottom = 68.0
text = "Restart at last checkpoint"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 199.0
margin_bottom = 92.0
text = "Exit"
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayerDie" to="." method="_on_PlayerDie_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
